--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,7 @@
-@import "partials/0_reset";
-@import "partials/1_mixins";
-@import "partials/2_settings";
-@import "partials/3_settings";
-@import "custom";
+@import "partials/a_reset";
+@import "partials/b_mixins";
+@import "partials/c_vars_&_prefs";
+@import "partials/d_fonts";
+
+@import "0_custom";
+@import "0_header_footer";
